samples/transactions/ballerina-springboot-transactions/hotel_service_springboot/k8s/hotel-deployment.yaml
# Copyright (c) 2018, WSO2 Inc. (http://www.wso2.org) All Rights Reserved.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: bridge-sample-hotel-deply
  labels:
    app: bridge-sample-hotel
spec:
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: bridge-sample-hotel
    spec:
      containers:
      - image: ballerina/ballerina_sidecar_springboot_transactions:latest
          name: bridge-sample-hotel
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
          name: hotel-port
