samples/transactions/ballerina-springboot-transactions/hotel_service_springboot/k8s/hotel-service-ingress.yaml
---
apiVersion: "extensions/v1beta1"
kind: "Ingress"
metadata:
  annotations:
    nginx.ingress.kubernetes.io/ssl-passthrough: "false"
    kubernetes.io/ingress.class: "nginx"
  finalizers: []
  labels:
    app: "bridge-sample-hotel"
  name: "bridge-sample-hotel-ingress"
  ownerReferences: []
spec:
  rules:
  - host: "hotel.sample.bridge.io"
    http:
      paths:
      - backend:
          serviceName: "bridge-sample-hotel-service"
          servicePort: 8080
        path: "/"
  tls:
  - hosts: []
